# aigiscode

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.plan/: TODO.md
docs/: AI_AGENT_USAGE.md  ANALYTICAL_MODE.md  ARCHITECTURE.md  PLUGIN_SYSTEM.md  RELIABILITY.md
src/aigiscode/: models.py  orchestration.py
src/aigiscode/ai/: backends.py
src/aigiscode/graph/: deadcode.py  hardwiring.py
src/aigiscode/indexer/: symbols.py
src/aigiscode/policy/: models.py
src/aigiscode/report/: generator.py
src/aigiscode/review/: ai_reviewer.py  security_reviewer.py
src/aigiscode/rules/: engine.py
src/codexaudit/: __init__.py  __main__.py  builtin_runtime_plugins.py  cli.py  contracts.py  extensions.py  filters.py  models.py
src/codexaudit/ai/: __init__.py  backends.py
src/codexaudit/graph/: __init__.py  analyzer.py  builder.py  deadcode.py  hardwiring.py
src/codexaudit/indexer/: __init__.py  parser.py  store.py  symbols.py
src/codexaudit/policy/: __init__.py  analytical.py  models.py  (+1 more)
tests/: conftest.py  test_ai_reviewer_sig.py  test_analyzer.py  test_backends.py  test_builder.py  test_contracts.py  test_deadcode.py  test_extensions.py  test_filters.py  test_hardwiring.py  test_models_external.py  test_orchestration.py  test_parser.py  test_report_archive.py  test_report_generator.py  test_rules_external.py  test_security_reviewer.py  test_store.py
website/: index.html  package-lock.json  package.json
(+17 files in other folders)
