[project]
name = "codexaudit"
version = "0.1.0"
description = "AI-powered whole-codebase analysis tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.10.0",
    "networkx>=3.4",
    "anthropic>=0.43.0",
    "openai>=1.60.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
]

[project.scripts]
codexaudit = "codexaudit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexaudit"]
